# runner

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.example  .env.locust.example  .flake8  .gitignore  .hintrc  .pre-commit-config.yaml  .yamllint.yaml  404.html  CONTRIBUTING.md  Containerfile  Containerfile.dev  Makefile  README.md  Vagrantfile  alembic.ini  architecture.html  clients.html  compose.dev.yaml  compose.example.yaml  config.html  getting-started.html  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  sitemap.xml  tasks.html  tox.ini  websocket.html
.devcontainer/: Containerfile  compose.yaml  devcontainer.json  setup.sh  teardown.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yaml  image.yaml  lint.yaml  package.yaml  publish.yaml  test.yaml
architecture/: index.html
assets/javascripts/: bundle.13a4f30d.min.js  bundle.50899def.min.js  bundle.56ea9cef.min.js  bundle.79ae519e.min.js  bundle.92b07e13.min.js  bundle.c8b220af.min.js  bundle.e71a0d61.min.js  bundle.f55a23d4.min.js
clients/: index.html
deploy/compose/: __init__.py  _archive.py  _lib.py  _models.py  backup.example.ini  backup.py  deps.py  do.sh  restore.example.ini  restore.py  ubuntu.sh
deploy/compose/lib/: __init__.py  _archive.py  _common.py  _constants.py  _container.py  _load.py  _local.py  _models.py  _postgres.py  _redis.py  _s3.py  _ssh.py  _validation.py  _webhook.py
docs/: architecture.md  clients.md  config.md  getting-started.md  index.md  openapi.json  tasks.md  websocket.md
docs/examples/: html.md  index.md  streamlit.md
docs/reference/: client.md  openapi.md
examples/: app.html  dummy_with_input.waldiez  dummy_with_input2.waldiez  html.html  index.html  streamlit.html  task_demo.html
examples/app/: index.html
examples/html/: index.html  site.webmanifest
examples/jupyter/: task_demo.ipynb
examples/plain/: browserconfig.xml  index.html
examples/streamlit/: app.py  index.html  requirements.txt
examples/streamlit/.streamlit/: config.toml
examples/task_demo/: index.html
getting-started/: index.html
ideas/: multi_mode.md
locustfiles/: tasks.py
nginx/: dev.conf  example.conf
reference/: client.html  openapi.html
reference/client/: index.html
reference/openapi/: index.html
requirements/: dev.txt  docs.txt  main.txt  test.txt
scripts/: __init__.py  _lib.py  build.py  check_hash.py  check_pysqlite.py  clean.py  db_revisions.py  docs.py  drop.py  drop.sql  first_lines.py  format.py  header.py  image.py  initial_data.py  lint.py  load.py  openapi.py  pre_start.py  requirements.py  smoke.py  start.sh  test.py  test_compose_setup.py  toggle.py  version.py
search/: search_index.js  search_index.json
tasks/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_dev.py  test_logging.py  test_start.py  test_version.py  types.py
tests/client/: __init__.py  test_auth.py  test_client_base.py  test_clients_admin.py  test_clients_api.py  test_tasks_api.py  test_tasks_client.py  test_websockets.py
tests/config/: __init__.py  test_auth.py  test_common.py  test_redis.py  test_server.py  test_settings.py  test_tasks.py
tests/data/: invalid.waldiez
tests/dependencies/: __init__.py  test_auth.py  test_getters.py  test_jwks.py  test_utils.py
tests/dependencies/storage/: __init__.py  test_local.py
tests/hashing/: __init__.py  test_argon_hasher.py  test_bcrypt_verifier.py  test_scrypt_hasher.py
tests/middleware/: __init__.py  test_conditional_gzip.py  test_extra_headers.py  test_limiter.py  test_slow_api.py
tests/models/: __init__.py  test_cron_util.py
tests/routes/: __init__.py  test_auth.py  test_other.py  test_parsing.py
tests/routes/v1/: __init__.py  test_client_router.py  test_env_vars.py  test_task_permission.py  test_task_router.py
tests/routes/ws/: __init__.py  test_auth.py  test_handler.py  test_listeners.py  test_manager.py  test_registry.py  test_task_manager.py  test_task_registry.py  test_validation.py
tests/schemas/: __init__.py  test_utils.py
tests/services/: __init__.py  test_client_service.py  test_external_token_service.py  test_task_service.py
tests/tasks/: __init__.py  test_cleanup.py  test_schedule.py
tests/tasks/app/: test_cli.py  test_flow_runner.py  test_main.py  test_redis_io_stream.py  test_results_serialization.py
waldiez_runner/: __init__.py  __main__.py  _logging.py  _version.py  cli.py  dev.py  main.py  start.py  worker.py
waldiez_runner/client/: __init__.py  _api_base.py  _auth.py  _client.py  _clients_api.py  _tasks_api.py  _websockets.py  auth.py  client_base.py  clients_admin.py  models.py  tasks_client.py
waldiez_runner/config/: __init__.py  _auth.py  _common.py  _postgres.py  _redis.py  _server.py  _tasks.py  settings.py  settings_manager.py
waldiez_runner/dependencies/: __init__.py  _utils.py  auth.py  context.py  database.py  getters.py  jwks.py  lifecycle.py  redis.py
waldiez_runner/dependencies/storage/: __init__.py  base.py  factory.py  local.py
waldiez_runner/hashing/: __init__.py  _argon_hasher.py  _bcrypt_verifier.py  _scrypt_hasher.py  dispatcher.py  protocol.py
waldiez_runner/middleware/: __init__.py  conditional_gzip.py  extra_headers.py  slow_api.py
waldiez_runner/migrations/: env.py  script.py.mako
waldiez_runner/migrations/versions/: 343db4e146c5_add_input_timeout.py  6fb95fce068f_initial.py  c8d44162a7c4_update_client_model.py  dc6dd57db1a5_update_tasks_model_allow_scheduling.py
waldiez_runner/models/: __init__.py  client.py  common.py  hasher.py  hasher_impl.py  task.py  task_status.py
waldiez_runner/routes/: __init__.py  _parsing.py  auth.py  other.py  stream.py
waldiez_runner/routes/ws/: auth.py  (+10 more)
waldiez_runner/schemas/: __init__.py  client.py  task.py  utils.py
waldiez_runner/services/: __init__.py  _client_service.py  _external_token_service.py  _task_service.py  client_service.py  external_token_service.py  task_service.py
waldiez_runner/tasks/: __base__.py  __init__.py  cleanup.py  common.py  dependencies.py  lifecycle.py  runner.py  running.py  schedule.py  status_watcher.py
websocket/: index.html
(+54 files in other folders)
